fix for result wrap

--- a/app/less/cms.less
+++ b/app/less/cms.less
@@ -112,4 +112,10 @@ hr{
     .column(12);
     margin-top: 5px;
   }
+  section{
+    .column(12);
+  }
+  #result{
+    word-wrap: break-word;
+  }
 }
